Finished fixing flicker on profile picture

--- a/celebrityFitnessProject/src/app/components/profile/profile.component.scss
+++ b/celebrityFitnessProject/src/app/components/profile/profile.component.scss
@@ -3487,7 +3487,7 @@ input[matInput]:focus.error-input::placeholder {
   .wide {
     display: flex;
   }
-
+}
 
 
   // .profilePictureContainerForDragging:not(.is-dragging) .zoomButtons,
@@ -3638,95 +3638,95 @@ input[matInput]:focus.error-input::placeholder {
   //   transform: scale(0.75);
   // }
 
-  .profilePictureContainerForDragging.tablet {
-    /* All your existing rules go inside here */
-    .dragToCenter.pre-animation,
-    .zoomButtons.pre-animation,
-    .profile-image-navigation.pre-animation,
-    .reset.pre-animation,
-    .circular-nav-container.pre-animation {
-      opacity: 0 !important;
-      visibility: visible !important;
-    }
-  
-    &:not(.is-dragging) .zoomButtons:not(.pre-animation):not(.entering),
-    &:not(.is-dragging) .dragToCenter:not(.pre-animation):not(.entering),
-    &:not(.is-dragging) .profile-image-navigation:not(.pre-animation):not(.entering),
-    &:not(.is-dragging) .circular-nav-container:not(.pre-animation):not(.entering) {
-      opacity: 1;
-      transition: opacity 0.2s ease-out;
-    }
-  
-    /* Ensure all controls (including reset) disappear during drag */
-    &.is-dragging .dragToCenter,
-    &.is-dragging .zoomButtons,
-    &.is-dragging .profile-image-navigation,
-    &.is-dragging .reset,
-    &.is-dragging .circular-nav-container {
-      opacity: 0 !important;
-      transition: opacity 0.2s ease-out;
-      pointer-events: none !important;
-    }
-  
-    /* Make sure zoom buttons have proper opacity */
-    .zoomIn:not(.disabled),
-    .zoomOut:not(.disabled) {
-      opacity: 1 !important;
-    }
-  
-    /* Chevron visibility */
-    &:has(.zoomIn:hover) .chevronRight,
-    &:has(.zoomOut:hover) .chevronLeft,
-    &:has(.zoomButtons) .chevronLeft,
-    &:has(.zoomButtons) .chevronRight {
-      opacity: 1 !important;
-    }
-  
-    /* Disabled state */
-    .zoomOut:disabled,
-    .zoomIn:disabled,
-    .reset:disabled {
-      opacity: 0.4 !important;
-    }
-  
-    &:has(.zoomButtons .zoomIn:hover:not(.disabled)) .dragToCenter,
-    &:has(.zoomButtons .zoomOut:hover:not(.disabled)) .dragToCenter {
-      opacity: 1;
-    }
-  
-    /* Reset button default state */
-    &:not(.is-dragging) .reset:not(.disabled):not(.pre-animation):not(.entering) {
-      opacity: 1 !important;
-    }
-  
-    &:has(.chevronRight:hover:not(.disabled)) .reset,
-    &:has(.chevronLeft:hover:not(.disabled)) .reset {
-      opacity: 0.4;
-    }
-  
-    /* If you want to nest again, we can do:
-     * &.is-dragging .reset {
-     *   opacity: 0 !important;
-     * }
-     */
-  
-    /* Override the hover state effects completely on mobile */
-    &:has(.zoomButtons:hover) .reset,
-    &:has(.chevronLeft:hover) .reset,
-    &:has(.chevronRight:hover) .reset {
-      opacity: 0.4;
-    }
-  
-    .zoomIn:active,
-    .zoomOut:active,
-    .chevronLeft:active,
-    .chevronRight:active {
-      opacity: 1 !important;
-      transform: scale(0.75);
-    }
-  }
 
-}
+
+//   .profilePictureContainerForDragging.tablet {
+//     /* All your existing rules go inside here */
+//     .dragToCenter.pre-animation,
+//     .zoomButtons.pre-animation,
+//     .profile-image-navigation.pre-animation,
+//     .reset.pre-animation,
+//     .circular-nav-container.pre-animation {
+//       opacity: 0 !important;
+//       visibility: visible !important;
+//     }
+  
+//     &:not(.is-dragging) .zoomButtons:not(.pre-animation):not(.entering),
+//     &:not(.is-dragging) .dragToCenter:not(.pre-animation):not(.entering),
+//     &:not(.is-dragging) .profile-image-navigation:not(.pre-animation):not(.entering),
+//     &:not(.is-dragging) .circular-nav-container:not(.pre-animation):not(.entering) {
+//       opacity: 1;
+//       transition: opacity 0.2s ease-out;
+//     }
+  
+//     /* Ensure all controls (including reset) disappear during drag */
+//     &.is-dragging .dragToCenter,
+//     &.is-dragging .zoomButtons,
+//     &.is-dragging .profile-image-navigation,
+//     &.is-dragging .reset,
+//     &.is-dragging .circular-nav-container {
+//       opacity: 0 !important;
+//       transition: opacity 0.2s ease-out;
+//       pointer-events: none !important;
+//     }
+  
+//     /* Make sure zoom buttons have proper opacity */
+//     .zoomIn:not(.disabled),
+//     .zoomOut:not(.disabled) {
+//       opacity: 1 !important;
+//     }
+  
+//     /* Chevron visibility */
+//     &:has(.zoomIn:hover) .chevronRight,
+//     &:has(.zoomOut:hover) .chevronLeft,
+//     &:has(.zoomButtons) .chevronLeft,
+//     &:has(.zoomButtons) .chevronRight {
+//       opacity: 1 !important;
+//     }
+  
+//     /* Disabled state */
+//     .zoomOut:disabled,
+//     .zoomIn:disabled,
+//     .reset:disabled {
+//       opacity: 0.4 !important;
+//     }
+  
+//     &:has(.zoomButtons .zoomIn:hover:not(.disabled)) .dragToCenter,
+//     &:has(.zoomButtons .zoomOut:hover:not(.disabled)) .dragToCenter {
+//       opacity: 1;
+//     }
+  
+//     /* Reset button default state */
+//     &:not(.is-dragging) .reset:not(.disabled):not(.pre-animation):not(.entering) {
+//       opacity: 1 !important;
+//     }
+  
+//     &:has(.chevronRight:hover:not(.disabled)) .reset,
+//     &:has(.chevronLeft:hover:not(.disabled)) .reset {
+//       opacity: 0.4;
+//     }
+  
+//     /* If you want to nest again, we can do:
+//      * &.is-dragging .reset {
+//      *   opacity: 0 !important;
+//      * }
+//      */
+  
+//     /* Override the hover state effects completely on mobile */
+//     &:has(.zoomButtons:hover) .reset,
+//     &:has(.chevronLeft:hover) .reset,
+//     &:has(.chevronRight:hover) .reset {
+//       opacity: 0.4;
+//     }
+  
+//     .zoomIn:active,
+//     .zoomOut:active,
+//     .chevronLeft:active,
+//     .chevronRight:active {
+//       opacity: 1 !important;
+//       transform: scale(0.75);
+//     }
+//   }
 
 
 @media screen and (min-width: 300px) and (max-width: 937px) {
@@ -3952,10 +3952,10 @@ input[matInput]:focus.error-input::placeholder {
     /* Force hardware acceleration */
     transform: translateZ(0);
     /* Smoother transitions on mobile */
-    transition: background-image 0.4s ease-out, 
-                background-position 0.4s ease-out, 
-                background-size 0.4s ease-out,
-                opacity 0.4s ease-out !important;
+    transition: background-image 0.1s ease-out, 
+                background-position 0.1s ease-out, 
+                background-size 0.1s ease-out,
+                opacity 0.1s ease-out !important;
     /* Prevent flickering during state changes */
     will-change: background-image, background-position, background-size, opacity;
   }
@@ -4911,6 +4911,13 @@ input[matInput]:focus.error-input::placeholder {
   //////////////////////
   .profilePictureContainerForDragging {
     transform: translateZ(0);
+    backface-visibility: hidden;
+    will-change: transform, background-image;
+    /* Ensure single transition property for all related changes */
+    transition: background-image 0.1s ease-out, 
+                background-position 0.1s ease-out, 
+                background-size 0.1s ease-out,
+                opacity 0.1s ease-out !important;
     will-change: transform;
   }
 
