--- a/celebrityFitnessProject/src/app/components/store/store.component.scss
+++ b/celebrityFitnessProject/src/app/components/store/store.component.scss
@@ -588,7 +588,7 @@ mat-card.products {
     position: relative;
     background-color: rgb(18, 17, 17);
     width: 80vw;
-    max-width: 23rem;
+    max-width: 22rem;
     height: auto;
     // max-height: 23rem;
     aspect-ratio: 2/3;
@@ -642,7 +642,7 @@ mat-card.products {
   }
 
   .actionButtonsContainer{
-    bottom: 1.5rem
+    bottom: 1.3rem
   }
 }
 
